fix settings wrap on mobile

--- a/src/components/search/search-settings/filter-settings.module.scss
+++ b/src/components/search/search-settings/filter-settings.module.scss
@@ -16,6 +16,7 @@
   > form {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     gap: 8px;
     align-items: center;
     > fieldset {
